--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
@@ -7,11 +7,20 @@
     <p>Рейтинг: @ViewBag.Rating</p>
     @if (User.Identity.Name != @ViewBag.CreatedBy)
     {
-        <form method="post" asp-action="IncreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@Context.Request.Path"
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
+        <form method="post" asp-action="IncreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@returnUrl"
             asp-route-discussionId="@ViewBag.DiscussionId">
             <input type="submit" value="+"/>
         </form>
-        <form method="post" asp-action="DecreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@Context.Request.Path"
+        <form method="post" asp-action="DecreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@returnUrl"
             asp-route-discussionId="@ViewBag.DiscussionId">
             <input type="submit" value="-" />
         </form>
@@ -44,11 +53,20 @@
     {
         @foreach (var comment in ViewBag.Comments)
         {
+            string returnUrl;
+            if (Context.Request.QueryString.HasValue)
+            {
+                returnUrl = Context.Request.Path + Context.Request.QueryString;
+            }
+            else
+            {
+                returnUrl = Context.Request.Path;
+            }
             <p>@comment.CreatedBy в @comment.CreatedDate</p>
             <p>@comment.Content</p>
             if (User.Identity.Name == comment.CreatedBy)
             {
-                <form method="post" asp-controller="Comment" asp-action="DeleteComment" asp-route-returnUrl="@Context.Request.Path" asp-route-id="@comment.Id">
+                <form method="post" asp-controller="Comment" asp-action="DeleteComment" asp-route-returnUrl="@returnUrl" asp-route-id="@comment.Id">
                     <input type="submit" value="удалить"/>
                 </form>
             }
