--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -8,8 +8,17 @@
 
 @if (User.Identity.IsAuthenticated)
 {
+    string returnUrl;
+    if (Context.Request.QueryString.HasValue)
+    {
+        returnUrl = Context.Request.Path + Context.Request.QueryString;
+    }
+    else
+    {
+        returnUrl = Context.Request.Path;
+    }
     <a asp-controller="User" asp-action="GetUser" asp-route-userName="@User.Identity.Name">мой профиль</a>
-    <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@Context.Request.Path">
+    <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@returnUrl">
         <input type="submit" value="выйти"/>
     </form>
     <br/><a asp-controller="Moderator" asp-action="SuggestedTopics" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные темы</a><br/>
@@ -18,7 +27,16 @@
 }
 else
 {
-    <a asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@Context.Request.Path">Войти</a>
+    string returnUrl;
+    if (Context.Request.QueryString.HasValue)
+    {
+        returnUrl = Context.Request.Path + Context.Request.QueryString;
+    }
+    else
+    {
+        returnUrl = Context.Request.Path;
+    }
+    <a asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@returnUrl">Войти</a>
     <a asp-controller="Auth" asp-action="Register">зарегистрироваться</a>
 } 
 
