--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedCommentsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedCommentsByUserName.cshtml
@@ -4,31 +4,44 @@
 
 <div class="text-center">
     <h3>Предложенные комментарии</h3>
-    @if (Model.Count != 0)
+    @if (true)
     {
-        <form method="post" asp-controller="Moderator" asp-action="DeleteAllSuggestedCommentsByUserName" asp-route-returnUrl="@Context.Request.Path"
-              asp-route-userName="@ViewBag.SuggestedByUserName">
-            <input type="submit" value="удалить все предложения"/>
-        </form>
-        <a asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@ViewBag.SuggestedByUserName" asp-route-returnUrl="@Context.Request.Path">
-            отстранить пользователя
-        </a>
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
+        @if (Model.Count != 0)
+        {
+            <form method="post" asp-controller="Moderator" asp-action="DeleteAllSuggestedCommentsByUserName" asp-route-returnUrl="@returnUrl"
+                  asp-route-userName="@ViewBag.SuggestedByUserName">
+             <input type="submit" value="удалить все предложения"/>
+            </form>
+            <a asp-controller="Moderator" asp-action="BanUser" asp-route-userName="@ViewBag.SuggestedByUserName" asp-route-returnUrl="@returnUrl">
+                отстранить пользователя
+            </a>
+        }
+        @foreach (var suggestedComment in Model)
+        {
+            <p>@suggestedComment.Content</p>
+            <form method="post" asp-controller="Moderator" asp-action="AcceptSuggestedComment" asp-route-id="@suggestedComment.Id"
+                asp-route-returnUrl="@returnUrl">
+                <input type="submit" value="принять" />
+            </form>
+            <form method="post" asp-controller="Moderator" asp-action="RejectSuggestedComment" asp-route-id="@suggestedComment.Id" 
+                asp-route-returnUrl="@returnUrl">
+                <input type="submit" value="отклонить" />
+            </form>
+            <a asp-controller="Moderator" asp-action="BanUserAndDeleteSuggestion"
+                asp-route-returnUrl="@returnUrl" asp-route-userName="@suggestedComment.CreatedBy"
+                asp-route-suggestionDeleteId="@suggestedComment.Id" asp-route-suggestionDeleteType="@BanTypeConstants.CommentBanType">
+                    остранить и отклонить предложение
+            </a>
+        }
     }
-    @foreach (var suggestedComment in Model)
-    {
-        <p>@suggestedComment.Content</p>
-        <form method="post" asp-controller="Moderator" asp-action="AcceptSuggestedComment" asp-route-id="@suggestedComment.Id"
-              asp-route-returnUrl="@Context.Request.Path">
-            <input type="submit" value="принять" />
-        </form>
-        <form method="post" asp-controller="Moderator" asp-action="RejectSuggestedComment" asp-route-id="@suggestedComment.Id" 
-              asp-route-returnUrl="@Context.Request.Path">
-            <input type="submit" value="отклонить" />
-        </form>
-        <a asp-controller="Moderator" asp-action="BanUserAndDeleteSuggestion"
-           asp-route-returnUrl="@Context.Request.Path" asp-route-userName="@suggestedComment.CreatedBy"
-           asp-route-suggestionDeleteId="@suggestedComment.Id" asp-route-suggestionDeleteType="@BanTypeConstants.CommentBanType">
-            остранить и отклонить предложение
-        </a>
-    }
+    
 </div>
