--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedDiscussionsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedDiscussionsByUserName.cshtml
@@ -5,11 +5,20 @@
     <h3>Предложенные обсуждения</h3>
     @if (Model.Count != 0)
     {
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
         <form method="post" asp-controller="Moderator" asp-action="DeleteAllSuggestedDiscussionsByUserName" asp-route-userName="@ViewBag.SuggestedByUserName"
-              asp-route-returnUrl="@Context.Request.Path">
+              asp-route-returnUrl="@returnUrl">
             <input type="submit" value="удалить все предложенные обсуждения"/>
         </form>
-        <a asp-controller="Moderator" asp-action="BanUser" asp-route-returnUrl="@Context.Request.Path" asp-route-userName="@ViewBag.SuggestedByUserName">
+        <a asp-controller="Moderator" asp-action="BanUser" asp-route-returnUrl="@returnUrl" asp-route-userName="@ViewBag.SuggestedByUserName">
             отстранить пользователя
         </a><br/>
     }
