--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
@@ -1,11 +1,21 @@
-﻿@using System.Web
-@model Web.MVC.Models.ViewModels.UserViewModels.GetSuggestedDiscussionsViewModel
+﻿@model Web.MVC.Models.ViewModels.UserViewModels.GetSuggestedDiscussionsViewModel
 
 <div class="text-center">
     <h3>Предложенные обсуждения</h3>
     @foreach (var suggestedDiscussion in Model.SuggestedDiscussions)
     {
-        <a href="~/SuggestedDiscussions/@suggestedDiscussion.Id?returnUrl=@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)">@suggestedDiscussion.Title</a><br/>
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
+        <a asp-controller="Moderator" asp-action="SuggestedDiscussion" asp-route-returnUrl="@returnUrl" asp-route-id="@suggestedDiscussion.Id">
+            @suggestedDiscussion.Title
+        </a><br/>
     }
 </div>
 
