--- a/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
@@ -9,17 +9,26 @@
     }
     else
     {
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
         <table>
             <tr><th>От пользователя</th><th>Причина</th><th>Тип</th></tr>
             @foreach (var report in Model.Reports)
             {
                 if (report.ReportedCommentContent is null)
                 {
-                    <tr><td>@report.UserNameReportedBy</td><td>@report.Reason</td><td><a href="~/reports/@report.Id?returnUrl=@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)">обсуждение</a></td></tr>
+                    <tr><td>@report.UserNameReportedBy</td><td>@report.Reason</td><td><a asp-controller="Report" asp-action="GetReport" asp-route-reportId="@report.Id" asp-route-returnUrl="@returnUrl">обсуждение</a></td></tr>
                 }
                 else
                 {
-                    <tr><td>@report.UserNameReportedBy</td><td>@report.Reason</td><td><a href="~/reports/@report.Id?returnUrl=@HttpUtility.UrlEncode(Context.Request.Path + Context.Request.QueryString)">комментарий</a></td></tr>
+                    <tr><td>@report.UserNameReportedBy</td><td>@report.Reason</td><td><a asp-controller="Report" asp-action="GetReport" asp-route-reportId="@report.Id" asp-route-returnUrl="@returnUrl">обсуждение</a></td></tr>
                 }
             }
         </table>
