--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersSuggestedTopics.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersSuggestedTopics.cshtml
@@ -8,12 +8,21 @@
     }
     else
     {
+        string returnUrl;
+        if (Context.Request.QueryString.HasValue)
+        {
+            returnUrl = Context.Request.Path + Context.Request.QueryString;
+        }
+        else
+        {
+            returnUrl = Context.Request.Path;
+        }
         foreach (var suggestedTopic in Model.SuggestedTopics)
         {
             <h6>@suggestedTopic.Name</h6>
             <p>Статус: На рассмотрении</p>
             <form method="post" asp-controller="SuggestTopic" asp-action="DeleteSuggestedTopicById"
-                  asp-route-returnUrl="@Context.Request.Path"
+                  asp-route-returnUrl="@returnUrl"
                   asp-route-id="@suggestedTopic.Id">
                 <input type="submit" value="удалить" />
             </form>
