Add reference to ban history page

--- a/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
     <br/><a asp-controller="Moderator" asp-action="SuggestedTopics" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные темы</a><br/>
     <a asp-controller="Moderator" asp-action="SuggestedDiscussions" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a><br/>
     <a asp-controller="Moderator" asp-action="SuggestedComments" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные комментарии</a><br/>
+    <a asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="1" asp-route-pageSize="20">история банов</a><br/>
 }
 else
 {
