--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/CommentBanned.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/CommentBanned.cshtml
@@ -2,6 +2,6 @@
 
 <div class="text-center">
     <h3>Вы не можете прокомментировать, так как Вы были отстранены, причину отстранения можно посмотреть в профиле</h3>
-    <a asp-action="GetDiscussion" asp-controller="Discussion" asp-route-id="@Model">к обсуждению</a>
+    <a asp-action="GetDiscussion" asp-controller="Discussion" asp-route-id="@Model" asp-route-pageNumber="1" asp-route-pageSize="20">к обсуждению</a>
     <br/><a asp-action="Index" asp-controller="Home">на главную</a>
 </div>
