--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -10,6 +10,9 @@
         <p>Ответов: @Model.Answers</p>
         @if (User.Identity.Name == Model.UserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
+            <a asp-controller="Bookmark" asp-action="GetBookmarks" asp-route-pageNumber="1" asp-route-pageSize="20" asp-route-userName="@Model.UserName">
+                закладки
+            </a><br/>
             if (Model.IsBanned)
             {
                 <p>Забанен по причине "@Model.BannedFor" до @Model.BannedUntil</p>
