--- a/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByAntiquity.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByAntiquity.cshtml
@@ -6,11 +6,13 @@
     {
         <form method="get">
             <input name="searchingQuery" placeholder="Поиск" />
-            <input type="hidden" name="pageSize" value="@Model.PageSize"/>
-            <input type="hidden" name="pageNumber" value="1"/>
+            <input type="hidden" name="pageSize" value="@Model.PageSize" />
+            <input type="hidden" name="pageNumber" value="1" />
             <input type="hidden" name="userName" value="@Model.UserName" />
-            <input type="submit" value="найти"/>
+            <input type="submit" value="найти" />
         </form>
+        <a asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="@Model.PageSize"
+           asp-route-userName="@Model.UserName">новые</a><br/>
         string returnUrl;
         if (Context.Request.QueryString.HasValue)
         {
@@ -27,7 +29,7 @@
             </a>
 
             <form method="post" asp-action="DeleteBookmark" asp-controller="Bookmark" asp-route-bookmarkId="@bookmark.Id" asp-route-returnUrl="@returnUrl">
-                <input type="submit" value="удалить закладку"/>
+                <input type="submit" value="удалить закладку" />
             </form>
         }
     }
@@ -35,13 +37,13 @@
 
 @if (Model.PreviousPageNumber > 0)
 {
-    <a asp-controller="Bookmark" asp-action="GetBookmarks" asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize"
+    <a asp-controller="Bookmark" asp-action="GetBookmarksByAntiquity" asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize"
        asp-route-userName="@Model.UserName" asp-route-searchingQuery="@Model.SearchingQuery">Назад</a>
 }
 @if (Model.DoesNextPageExist && Model.Bookmarks.Count != 0)
 {
-    
-    <a asp-controller="Bookmark" asp-action="GetBookmarks" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize"
+
+    <a asp-controller="Bookmark" asp-action="GetBookmarksByAntiquity" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize"
        asp-route-searchingQuery="@Model.SearchingQuery">
         Вперед
     </a>
