--- a/src/Web/Web.MVC/Web.MVC/Views/Admin/CreateBotAccount.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Admin/CreateBotAccount.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.Admin.CreateBotDto
+﻿@{
+    ViewData["Title"] = "Создать бота";
+}
+@model Web.MVC.DTOs.Admin.CreateBotDto
 
 <h3>Создать бота</h3>
 
