--- a/src/Web/Web.MVC/Web.MVC/Views/Admin/GetBansHistory.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Admin/GetBansHistory.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.Models.ViewModels.AdminViewModels.GetBansHistoryViewModel
+﻿@{
+    ViewData["Title"] = "История банов";
+}
+@model Web.MVC.Models.ViewModels.AdminViewModels.GetBansHistoryViewModel
 
 <div class="text-center">
     <form method="get">
