--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ConfirmEmail.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ConfirmEmail.cshtml
@@ -1,2 +1,5 @@
-﻿<h3>Вы успешно подтвердили свою почту</h3>
+﻿@{
+    ViewData["Title"] = "Почта успешно подтверждена";
+}
+<h3>Вы успешно подтвердили свою почту</h3>
 <a asp-controller="Home" asp-action="Index">На главную</a>
