--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Confirmation.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Confirmation.cshtml
@@ -1,2 +1,5 @@
-﻿<h3>Для завершения регистрации проверьте электронную почту и перейдите по ссылке, указанной в письме</h3>
+﻿@{
+    ViewData["Title"] = "Подтверждение почты";
+}
+<h3>Для завершения регистрации проверьте электронную почту и перейдите по ссылке, указанной в письме</h3>
 <a asp-controller="Home" asp-action="Index">На главную</a>
