--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPassword.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.ResetPassword.ForgotPasswordDto
+﻿@{
+    ViewData["Title"] = "Забыли пароль";
+}
+@model Web.MVC.DTOs.ResetPassword.ForgotPasswordDto
 
 <h3>Сбросить пароль</h3>
 
