--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPasswordConfirmation.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPasswordConfirmation.cshtml
@@ -1,1 +1,4 @@
-﻿<h3>Перейдите по ссылке, отправленной на вашу эл. почту для сброса пароля</h3>
+﻿@{
+    ViewData["Title"] = "Перейдите по ссылке в вашей эл. почте для сброса пароля";
+}
+<h3>Перейдите по ссылке, отправленной на вашу эл. почту для сброса пароля</h3>
