--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.Auth.LoginDto
+﻿@{
+    ViewData["Title"] = "Вход";
+}
+@model Web.MVC.DTOs.Auth.LoginDto
 
 <h4>Войти в аккаунт</h4>
 
