--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.Auth.RegisterDto
+﻿@{
+    ViewData["Title"] = "Регистрация";
+}
+@model Web.MVC.DTOs.Auth.RegisterDto
 
 <h3>Зарегистрироваться</h3>
 <form method="post" asp-action="Register" asp-controller="Auth">
