--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ResetPassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ResetPassword.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.ResetPassword.ResetPasswordDto
+﻿@{
+    ViewData["Title"] = "Сброс пароля";
+}
+@model Web.MVC.DTOs.ResetPassword.ResetPasswordDto
 
 <h3>Сброс пароля</h3>
 
