--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Success.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Success.cshtml
@@ -1,3 +1,6 @@
-﻿<h3>Пароль успешно обновлен</h3>
+﻿@{
+    ViewData["Title"] = "Пароль обновлен";
+}
+<h3>Пароль успешно обновлен</h3>
 
 <a asp-controller="Home" asp-action="Index">На главную</a>
