--- a/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByNovelty.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Bookmark/GetBookmarksByNovelty.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.Models.ViewModels.Bookmark.BookmarkViewModel
+﻿@{
+    ViewData["Title"] = "Новые закладки";
+}
+@model Web.MVC.Models.ViewModels.Bookmark.BookmarkViewModel
 
 <h3>Закладки</h3>
 <div>
