--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/CommentBanned.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/CommentBanned.cshtml
@@ -1,4 +1,7 @@
-﻿@model Guid
+﻿@{
+    ViewData["Title"] = "Вы не можете оставить комментарий";
+}
+@model Guid
 
 <div class="text-center">
     <h3>Вы не можете прокомментировать, так как Вы были отстранены, причину отстранения можно посмотреть в профиле</h3>
