--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
@@ -1,4 +1,7 @@
-﻿<link rel="stylesheet" href="~/css/BreakLargeLines.css"/>
+﻿@{
+    ViewData["Title"] = @ViewBag.Title;
+}
+<link rel="stylesheet" href="~/css/BreakLargeLines.css"/>
 @model Web.MVC.DTOs.Comment.SuggestCommentDto
 
 <div>
