--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByNovelty.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByNovelty.cshtml
@@ -1,4 +1,7 @@
-﻿@model GetDiscussionsViewModel
+﻿@{
+    ViewData["Title"] = "Новые обсуждения";
+}
+@model GetDiscussionsViewModel
 
 <h3>Новые обсуждения</h3>
 
