--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForAllTime.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForAllTime.cshtml
@@ -1,4 +1,7 @@
-﻿@model GetDiscussionsViewModel
+﻿@{
+    ViewData["Title"] = "Лучшие обсуждения";
+}
+@model GetDiscussionsViewModel
 
 <h3>Лучшее за все время</h3>
 
