--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/RatingIsAlreadyDecreased.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/RatingIsAlreadyDecreased.cshtml
@@ -1,4 +1,7 @@
-﻿@model string
+﻿@{
+    ViewData["Title"] = "Рейтинг уже уменьшен";
+}
+@model string
 
 <div class="text-center">
     <h3>Вы уже уменьшили рейтинг этого обсуждения</h3>
