--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/RatingIsAlreadyIncreased.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/RatingIsAlreadyIncreased.cshtml
@@ -1,4 +1,7 @@
-﻿@model string
+﻿@{
+    ViewData["Title"] = "Рейтинг уже увеличен";
+}
+@model string
 
 <div class="text-center">
     <h3>Вы уже увеличили рейтинг этого обсуждения</h3>
