--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/SomethingWentWrong.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/SomethingWentWrong.cshtml
@@ -1,4 +1,7 @@
-﻿@model Guid
+﻿@{
+    ViewData["Title"] = "Что-то пошло не так";
+}
+@model Guid
 
 <div class="text-center">
     <h3>Что-то пошло не так, попробуйте ещё раз</h3>
