--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/SuggestDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/SuggestDiscussion.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.Discussion.DiscussionDto
+﻿@{
+    ViewData["Title"] = "Предложить обсуждение";
+}
+@model Web.MVC.DTOs.Discussion.DiscussionDto
 
 <h3>Предложить обсуждение</h3>
 
