--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/ThanksForComment.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/ThanksForComment.cshtml
@@ -1,4 +1,7 @@
-﻿@model Guid
+﻿@{
+    ViewData["Title"] = "Спасибо";
+}
+@model Guid
 
 <div class="text-center">
     <h3>Спасибо за оставленный комментарий, в ближайшее время модерация его рассмотрит, следите за статусом проверки в профиле</h3>
