--- a/src/Web/Web.MVC/Web.MVC/Views/Information/AccessIsForbidden.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Information/AccessIsForbidden.cshtml
@@ -1,3 +1,6 @@
-﻿<div class="text-center">
+﻿@{
+    ViewData["Title"] = "Недостаточно прав";
+}
+<div class="text-center">
     <h4>У Вас недостаточно прав для просмотра данной страницы</h4>
 </div>
