--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/BanUserAndDeleteSuggestion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/BanUserAndDeleteSuggestion.cshtml
@@ -1,4 +1,7 @@
-﻿@using Web.MVC.Constants
+﻿@{
+    ViewData["Title"] = "Отстранить пользователя и удалить предложение";
+}
+@using Web.MVC.Constants
 @model Web.MVC.DTOs.Moderator.BanUserDto
 
 <h3>Отстранить пользователя</h3>
