--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/ChangeUserRoles.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/ChangeUserRoles.cshtml
@@ -1,4 +1,7 @@
-﻿@model List<Web.MVC.DTOs.Moderator.CheckBoxUserRoleDto>
+﻿@{
+    ViewData["Title"] = "Назначить роль";
+}
+@model List<Web.MVC.DTOs.Moderator.CheckBoxUserRoleDto>
 
 <h3>Назначить роли</h3>
 <form method="post">
