--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedCommentsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedCommentsByUserName.cshtml
@@ -1,4 +1,7 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@{
+    ViewData["Title"] = "Предложенные комментарии";
+}
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Web.MVC.Constants
 @model System.Collections.Generic.List<Web.MVC.Models.ApiResponses.CommentsResponses.SuggestedCommentResponse>
 
