--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedDiscussionsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedDiscussionsByUserName.cshtml
@@ -1,4 +1,7 @@
-﻿@using System.Web
+﻿@{
+    ViewData["Title"] = "Предложенные обсуждения";
+}
+@using System.Web
 @model System.Collections.Generic.List<Web.MVC.Models.ApiResponses.Discussion.SuggestedDiscussionResponse>
 
 <div class="text-center">
