--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedComments.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedComments.cshtml
@@ -1,4 +1,7 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@{
+    ViewData["Title"] = "Предложенные комментарии";
+}
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Web.MVC.Constants
 @model Web.MVC.Models.ViewModels.ModeratorViewModels.SuggestedCommentsViewModel
 
