--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedTopics.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedTopics.cshtml
@@ -1,4 +1,7 @@
-﻿@using Web.MVC.Constants
+﻿@{
+    ViewData["Title"] = "Предложенные темы";
+}
+@using Web.MVC.Constants
 @model GetSuggestedTopicViewModel
 
 <div class="text-center">
