--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
@@ -1,4 +1,7 @@
-﻿@model List<Web.MVC.Models.ApiResponses.ApNetUserResponses.AspNetUserResponse>
+﻿@{
+    ViewData["Title"] = "Список пользователей";
+}
+@model List<Web.MVC.Models.ApiResponses.ApNetUserResponses.AspNetUserResponse>
 @using Web.MVC.Constants
 
 <h3>Пользователи</h3>
