--- a/src/Web/Web.MVC/Web.MVC/Views/Report/AddReport.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/AddReport.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.Report.CreateReportDto
+﻿@{
+    ViewData["Title"] = "Пожаловаться";
+}
+@model Web.MVC.DTOs.Report.CreateReportDto
 
 @if (Model.ReportedCommentContent is null)
 {
