--- a/src/Web/Web.MVC/Web.MVC/Views/Report/Thanks.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/Thanks.cshtml
@@ -1,4 +1,7 @@
-﻿@model string
+﻿@{
+    ViewData["Title"] = "Спасибо";
+}
+@model string
 
 <div class="text-center">
     <h3>Спасибо за оставленную жалобу, она будет рассмотрена в ближайшее время</h3>
