--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/SuggestTopic.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/SuggestTopic.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.Topic.TopicDto
+﻿@{
+    ViewData["Title"] = "Предложить тему";
+}
+@model Web.MVC.DTOs.Topic.TopicDto
 
 <h3>Предложить тему</h3>
 
