--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Topics.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Topics.cshtml
@@ -1,4 +1,7 @@
-﻿@model List<Web.MVC.Models.ApiResponses.TopicResponse>
+﻿@{
+    ViewData["Title"] = "Темы";
+}
+@model List<Web.MVC.Models.ApiResponses.TopicResponse>
 
 <div class="text-center">
     <h3>Темы</h3>
