--- a/src/Web/Web.MVC/Web.MVC/Views/User/ChangePassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/ChangePassword.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.User.ChangePasswordDto
+﻿@{
+    ViewData["Title"] = "Изменить пароль";
+}
+@model Web.MVC.DTOs.User.ChangePasswordDto
 
 <h3>Изменить пароль</h3>
 
