--- a/src/Web/Web.MVC/Web.MVC/Views/User/ChangeUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/ChangeUserName.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.DTOs.User.ChangeUserNameDto
+﻿@{
+    ViewData["Title"] = "Изменить имя пользователя";
+}
+@model Web.MVC.DTOs.User.ChangeUserNameDto
 
 <h3>Сменить имя</h3>
 <form method="post">
