--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersSuggestedComments.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersSuggestedComments.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.Models.ViewModels.ModeratorViewModels.SuggestedCommentsViewModel
+﻿@{
+    ViewData["Title"] = "Предложенные комментарии";
+}
+@model Web.MVC.Models.ViewModels.ModeratorViewModels.SuggestedCommentsViewModel
 
 <div>
     <h3>Предложенные комментарии</h3>
