--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersSuggestedTopics.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersSuggestedTopics.cshtml
@@ -1,4 +1,7 @@
-﻿@model GetSuggestedTopicViewModel
+﻿@{
+    ViewData["Title"] = "Предложенные темы";
+}
+@model GetSuggestedTopicViewModel
 
 <div>
     <h3>Предложенные темы</h3>
