--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/EmailIsNotConfirmed.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/EmailIsNotConfirmed.cshtml
@@ -1,4 +1,7 @@
-﻿@model string
+﻿@{
+    ViewData["Title"] = "Почта не подтверждена";
+}
+@model string
 
 <div class="text-center">
     <h3>Вы не были аутентифицированы, так как Ваша почта не подтверждена</h3>
