--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/Thanks.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/Thanks.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="text-center">
+﻿@{
+    ViewData["Title"] = "Спасибо";
+}
+<div class="text-center">
 <h3>В ближайшее время модерация рассмотрит Ваше обсуждение, следите за статусом проверки в профиле</h3>
 <a asp-action="Index" asp-controller="Home">На главную</a>
 </div>
