--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
@@ -1,4 +1,7 @@
-﻿@using Web.MVC.Constants
+﻿@{
+    ViewData["Title"] = "Предложенные темы";
+}
+@using Web.MVC.Constants
 @model List<Web.MVC.Models.ApiResponses.TopicResponse>
 
 <div class="text-center">
