--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/SuggestedDiscussions.cshtml
@@ -1,4 +1,7 @@
-﻿@model Web.MVC.Models.ViewModels.UserViewModels.GetSuggestedDiscussionsViewModel
+﻿@{
+    ViewData["Title"] = "Предложенные обсуждения";
+}
+@model Web.MVC.Models.ViewModels.UserViewModels.GetSuggestedDiscussionsViewModel
 
 <div class="text-center">
     <h3>Предложенные обсуждения</h3>
