--- a/src/Web/Web.MVC/Web.MVC/Views/Report/ReportBanned.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/ReportBanned.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="text-center">
+﻿@{
+    ViewData["Title"] = "Вы не можете пожаловаться";
+}
+<div class="text-center">
     <h3>Вы не можете отправить жалобу, так как Вы были отстранены, причину отстранения можно посмотреть в профиле</h3>
     <a asp-action="Index" asp-controller="Home">на главную</a>
 </div>
