--- a/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Report/Reports.cshtml
@@ -1,4 +1,7 @@
-﻿@using System.Web
+﻿@{
+    ViewData["Title"] = "Жалобы";
+}
+@using System.Web
 @model GetReportsViewModel
 
 <div class="text-center">
