--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/ActionError.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/ActionError.cshtml
@@ -1,2 +1,5 @@
-﻿<h3>Что-то пошло не так, попробуйте ещё раз</h3>
+﻿@{
+    ViewData["Title"] = "Что-то пошло не так";
+}
+<h3>Что-то пошло не так, попробуйте ещё раз</h3>
 <a asp-controller="Home" asp-action="Index">На главную</a>
