--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/GetAllTopicsSortedByPopularity.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/GetAllTopicsSortedByPopularity.cshtml
@@ -1,4 +1,7 @@
-﻿@model List<Web.MVC.Models.ApiResponses.TopicModel>
+﻿@{
+    ViewData["Title"] = "Популярные темы";
+}
+@model List<Web.MVC.Models.ApiResponses.TopicModel>
 
 <div class="text-center">
     <h3>Популярные темы</h3>
