--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Thanks.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Thanks.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="text-center">
+﻿@{
+    ViewData["Title"] = "Спасибо";
+}
+<div class="text-center">
     <h3>Ваше предложение по созданию темы передано на проверку, статус проверки смотрите в профиле</h3>
     <a asp-controller="Home" asp-action="Index">На главную</a>
 </div>
