--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -1,4 +1,7 @@
-﻿@using Web.MVC.Constants
+﻿@{
+    ViewData["Title"] = $"{Model.UserName}";
+}
+@using Web.MVC.Constants
 @model Web.MVC.Models.ApiResponses.CustUserResponses.UserResponse
 
 <div class="text-center">
