--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
@@ -26,5 +26,25 @@
         <input asp-for="PasswordConfirm" />
         <span asp-validation-for="PasswordConfirm"></span>
     </div>
+    <div>
+        <dnt-captcha asp-captcha-generator-max="99999"
+                     asp-captcha-generator-min="1000"
+                     asp-captcha-generator-language="Russian"
+                     asp-captcha-generator-display-mode="ShowDigits"
+                     asp-use-relative-urls="true"
+                     asp-placeholder="Введите капчу"
+                     asp-validation-error-message="Пожалуйста, пройдите капчу"
+                     asp-too-many-requests-error-message="Слишком много запросов"
+                     asp-font-name="Tahoma"
+                     asp-font-size="20"
+                     asp-fore-color="#333333"
+                     asp-back-color="#ccc"
+                     asp-text-box-class="text-box single-line form-control col-md-4"
+                     asp-text-box-template="<div class='input-group col-md-4'><span class='input-group-addon'><span class='glyphicon glyphicon-lock'></span></span>{0}</div>"
+                     asp-validation-message-class="text-danger"
+                     asp-refresh-button-class="glyphicon glyphicon-refresh btn-sm"
+                     asp-show-refresh-button="true"
+        />
+    </div>
     <input type="submit" value="зарегистрироваться"/>
 </form>
