--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -55,7 +55,7 @@
             {
                 returnUrl = Context.Request.Path;
             }
-            <a asp-controller="Moderator" asp-action="ChangeUserRoles" asp-route-returnUrl="@returnUrl"
+            <br/><br/><a asp-controller="Moderator" asp-action="ChangeUserRoles" asp-route-returnUrl="@returnUrl"
                asp-route-aspNetUserId="@Model.AspNetUserId">назначить роль</a>
         }
         
