--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Web.MVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/layout.css"/>
 </head>
 <body>
     <header>
@@ -18,7 +19,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                @* <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Reports" asp-route-reportType="@ReportTypeConstants.DiscussionType" asp-route-pageNumber="1" asp-route-pageSize="20">DiscussionReports</a>
@@ -51,6 +52,50 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="1" asp-route-pageSize="30">Все пользователи</a>
                         </li>
                     </ul>
+                </div> *@
+                <div class="profile-btns">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        string returnUrl;
+                        if (Context.Request.QueryString.HasValue)
+                        {
+                            returnUrl = Context.Request.Path + Context.Request.QueryString;
+                        }
+                        else
+                        {
+                            returnUrl = Context.Request.Path;
+                        }
+                        <ul class="navbar-nav flex-grow-1 profile-btns">
+                            <li class="nav-item profile-btns">
+                                <a class="profile-btns" asp-controller="User" asp-action="GetUser" asp-route-userName="@User.Identity.Name">мой профиль</a>
+                            </li>
+                            <li class="nav-item profile-btns">
+                                <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@returnUrl">
+                                    <input class="logout" type="submit" value="выйти"/>
+                                </form>
+                            </li>
+                        </ul>
+                    }
+                    else
+                    {
+                        string returnUrl;
+                        if (Context.Request.QueryString.HasValue)
+                        {
+                            returnUrl = Context.Request.Path + Context.Request.QueryString;
+                        }
+                        else
+                        {
+                            returnUrl = Context.Request.Path;
+                        }
+                        <ul class="navbar-nav flex-grow-1 profile-btns">
+                            <li class="nav-item profile-btns">
+                                <a class="profile-btns" asp-controller="Auth" asp-action="Login" asp-route-returnUrl="@returnUrl">войти</a>
+                            </li>
+                            <li class="nav-item profile-btns">
+                                <a class="profile-btns" asp-controller="Auth" asp-action="Register">зарегистрироваться</a>
+                            </li>
+                        </ul>
+                    }
                 </div>
             </div>
         </nav>
