--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -67,12 +67,15 @@
                         }
                         <ul class="navbar-nav flex-grow-1 profile-btns">
                             <li class="nav-item profile-btns">
-                                <a class="profile-btns" asp-controller="User" asp-action="GetUser" asp-route-userName="@User.Identity.Name">мой профиль</a>
-                            </li>
-                            <li class="nav-item profile-btns">
-                                <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@returnUrl">
-                                    <input class="logout" type="submit" value="выйти"/>
-                                </form>
+                                <div class="dropdown-profile">
+                                    <button id="dropdownProfileButton" class="open-profile-dropdown-btn">@User.Identity.Name &#x25BC;</button>
+                                    <div id="dropdownProfileList" class="dropdown-profile-list">
+                                        <a class="profile-btns" asp-controller="User" asp-action="GetUser" asp-route-userName="@User.Identity.Name">мой профиль</a>
+                                        <form method="post" asp-controller="Auth" asp-action="Logout" asp-route-returnUrl="@returnUrl">
+                                            <input class="logout" type="submit" value="выйти"/>
+                                        </form>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     }
@@ -114,6 +117,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/layout/dropdown.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
