--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
@@ -33,3 +33,47 @@ input.logout {
 input.logout:hover {
     background-color: orange;
 }
+.dropdown-profile {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-profile-list {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+}
+.dropdown-profile-list a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-profile-list a:hover {
+    background-color: #f1f1f1;
+}
+.dropdown-profile-list input[type="submit"] {
+    background-color: white;
+    border: 0;
+    color: black;
+    padding: 12px 16px;
+    display: block;
+    width: 100%;
+    text-align: left;
+}
+.dropdown-profile-list input[type="submit"]:hover {
+    background-color: #f1f1f1;
+}
+.open-profile-dropdown-btn {
+    border: 0;
+    background-color: white;
+    padding: 10px 15px;
+    color: black;
+    cursor: pointer;
+}
+.open-profile-dropdown-btn:hover {
+    background-color: orange;
+}
